Back-ported the fix and the test case for bug #50257 from mariadb-5.3 code line. Adjusted results for a few test cases.